--- a/src/index.css
+++ b/src/index.css
@@ -21,9 +21,11 @@
 .dp{
     height: 20px;
     width: 20px; 
+    margin-top: 5px;
+    margin-right: 5px;
 }
 
-.post{
+.image{
     width: 300px;
     height: 250px;
 }
